test/good/13_2_spectest.fsf
type ntree[T] = Node(e:T,f:list[ntree[T]])
