test/bad/21_2_spectest_bad.fsf
type bad3[T,T] = Bad3(e:T,f:T)
